PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- *Breaking change!* Renamed the PEL user-options that activate a package
  for major modes that had a name ending with '-mode'.:
  the name of these user options no longer ends with '-mode'.
  The affected user options are:
  - pel-use-asn1-mode is now pel-use-asn1
  - pel-use-bison-mode is now pel-use-bison
  - pel-use-changelog-mode is now pel-use-changelog
  - pel-use-cmake-mode is now pel-use-cmake
  - pel-use-crontab-mode is now pel-use-crontab
  - pel-use-csv-mode is now pel-use-csv
  - pel-use-cwl-mode is now pel-use-cwl
  - pel-use-diffview-mode is now pel-use-diffview
  - pel-use-dockerfile-mode is now pel-use-dockerfile
  - pel-use-gitignore-mode is now pel-use-gitignore
  - pel-use-hgignore-mode is now pel-use-hgignore
  - pel-use-ijanet-mode is now pel-use-ijanet
  - pel-use-intel-hex-mode is now pel-use-intel-hex
  - pel-use-kconfig-mode is now pel-use-kconfig
  - pel-use-log4j-mode is now pel-use-log4j
  - pel-use-meson-mode is now pel-use-meson
  - pel-use-mscgen-mode is now pel-use-mscgen
  - pel-use-ninja-mode is now pel-use-ninja
  - pel-use-nix-mode is now pel-use-nix
  - pel-use-org-mode is now pel-use-org
  - pel-use-rails-log-mode is now pel-use-rails-log
  - pel-use-rfc-mode is now pel-use-rfc
  - pel-use-rpm-spec-mode is now pel-use-rpm-spec
  - pel-use-rst-mode is now pel-use-rst
  - pel-use-strace-mode is now pel-use-strace
  - pel-use-syslog-mode is now pel-use-syslog
  - pel-use-yaml-mode is now pel-use-yaml
  - pel-use-yang-mode is now pel-use-yang
  Also renamed pel-use-x509-mode renamed to pel-use-x509-modes (add a 's')

  Execute the upgrade script provided in upgrade/upgrade-01.
  Type =cd upgrades; ./upgrade-01 --help= to get more information on the command
  and to check you can access it.

  Once this is done execute =cd upgrades; ./upgrade-01= to update the content of your